# Feliss

./: .gitignore  LICENSE  LICENSE.txt  ProjectConfig.yaml  README.md  README.txt  main.cpp  scene.fls
apps/: EditorMain.cpp  RuntimeMain.cpp
assets/scripts/: PlayerController.cs  example_game.lua
extensions/example_extension/: CMakeLists.txt  example_extension.cpp
include/feliss/: Types.h  feliss_api.h
src/api/: feliss_api.cpp
src/assets/: AssetRegistry.cpp  AssetRegistry.h
src/audio/: AudioEngine.cpp  AudioEngine.h
src/core/: Engine.cpp  Engine.h  EventSystem.cpp  EventSystem.h  FileSystem.cpp  FileSystem.h  Logger.cpp  Logger.h  TaskScheduler.cpp  TaskScheduler.h  Timer.cpp  Timer.h  UUID.cpp
src/ecs/: Component.h  ComponentFactory.cpp  ComponentFactory.h  World.cpp  World.h
src/editor/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  ConfigHotReloadService.cpp  ConfigHotReloadService.h  EditorApp.cpp  EditorApp.h  EditorSession.cpp  EditorSession.h  ExtensionManager.cpp  ExtensionManager.h  FileDialogs.cpp  FileDialogs.h  InspectorPanel.cpp  InspectorPanel.h  MenuBar.hpp  ProjectExporter.cpp  ProjectExporter.h  ProjectSettingsPanel.cpp  ProjectSettingsPanel.h  PythonTooling.cpp  PythonTooling.h  PythonToolingPanel.cpp  PythonToolingPanel.h
src/physics/: IPhysicsBackend.h  PhysicsBackendFactory.cpp  PhysicsBackendFactory.h  PhysicsTypes.h  PhysicsWorld.cpp  PhysicsWorld.h
src/platform/: Window.cpp  Window.h
src/project/: ProjectConfig.cpp  ProjectConfig.h
src/reflection/: BuiltinComponentMetadata.cpp  BuiltinComponentMetadata.h  (+2 more)
tests/: tests.cpp
(+36 files in other folders)
